--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,9 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 webpki-roots = "0.26"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+tokio = { version = "1.44.1", features = ["rt", "net", "rt-multi-thread", "io-util", "macros"] }
+socket2 = "0.5.9"
+env_logger = "0.11.8"
 
 [profile.release]
 lto = true
